--- a/cipher.html
+++ b/cipher.html
@@ -4,8 +4,8 @@
         <title>Caesar Cipher</title>
 </head>
 <body>
-        <link rel="stylesheet" href="styles/cipher.css" type="text/css" />
-        <script type="text/javascript" src="js/cipher.js"></script>
+        <link rel="stylesheet" href="cipher.css" type="text/css" />
+        <script type="text/javascript" src="cipher.js"></script>
         <h1>You Can Encrypt your Messages here using Caesar Cipher</h1>
         <fieldset>
                 <fieldset>
