chore(): update favicon, readme [finishes]

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-        <title>Caesar Cipher</title>
-        <link rel="stylesheet" href="styles/cipher.css" type="text/css" />
-      </head>
+        
+         <!-- Meta -->
+    <meta charset="UTF-8">
+    <meta name="description" content="Text encryption using caesar cipher algorithm">
+    <meta name="keywords" content="encrypt, decrypt, caesar cipher, algorithm, encryption">
+    <meta name="author" content="Adépòjù Olúwáségun">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title -->
+    <title>Caesar Cipher Encrption Algorithm</title>
+    <!-- Favicon -->
+    <link rel="icon" href="img/fav.ico" sizes="16x16">
+    <link rel="stylesheet" href="styles/cipher.css" type="text/css" />
+</head>
       <body>
         <div class="top">
           <hr>
