bg(): update view [finishes]

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
     </br>
     </fieldset>
-    <h5 class="follow">Follow me on Twitter</h5>
+    <h5 class="follow">Built with &nbsp; ❤️ &nbsp; by Adépòjù Olúwáségun</h5>
     <a href="https://twitter.com/shegsteham?ref_src=twsrc%5Etfw" class="twitter-follow-button"
       data-show-count="false">Follow @TwitterDev</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
