--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </br>
     </fieldset>
     <h5 class="follow">Built with &nbsp; ❤️ &nbsp; by Adépòjù Olúwáségun</h5>
-    <a href="https://twitter.com/shegsteham?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+    <a href="https://twitter.com/oluwasegun_AA?ref_src=twsrc%5Etfw" class="twitter-follow-button"
       data-show-count="false">Follow @TwitterDev</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
@@ -116,7 +116,7 @@
 </body>
 <footer class="footer">
   <div class="text">
-    <p>@shegsteham</p>
+    <p>@Olúwáségun</p>
   </div>
 </footer>
 
